# EchoType-Lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
echotype_lab/: __init__.py  consent.py
echotype_lab/audio/: __init__.py  recorder.py
echotype_lab/evaluation/: __init__.py  metrics.py
echotype_lab/features/: __init__.py  mfcc.py
echotype_lab/models/: __init__.py  classifier.py
echotype_lab/visualization/: __init__.py  plots.py
scripts/: __init__.py  record_keystrokes.py  train_model.py
tests/: __init__.py  conftest.py  test_audio.py  test_consent.py  test_evaluation.py  test_features.py  test_models.py  test_package.py  test_visualization.py
