[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echotype-lab"
version = "0.1.0"
description = "Educational side-channel research: classify keyboard keystrokes from audio"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["side-channel", "acoustic", "keystroke", "machine-learning", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyaudio>=0.2.13",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
tensorflow = ["tensorflow>=2.13.0"]
torch = ["torch>=2.0.0"]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]

[project.scripts]
echotype-record = "scripts.record_keystrokes:main"
echotype-train  = "scripts.train_model:main"

[tool.setuptools.packages.find]
include = ["echotype_lab*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
